--- a/Pipfile
+++ b/Pipfile
@@ -24,11 +24,12 @@ Flask-Script = "==2.0.6"
 "Jinja2" = "==2.10"
 Mako = "==1.0.7"
 MarkupSafe = "==1.0"
-Flask-Bootstrap = "==3.3.7.1"
 werkzeug = "*"
 pygithub = "*"
 pygments = "*"
 coverage = "*"
 arrow = "*"
+pytest = "*"
+pytest-cov = "*"
 
 [dev-packages]
